WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
92296
[WebGL] fast/canvas/webgl/framebuffer-object-attachment.html fails on certain platforms
https://bugs.webkit.org/show_bug.cgi?id=92296
Summary
[WebGL] fast/canvas/webgl/framebuffer-object-attachment.html fails on certain...
Joshua Netterfield
Reported
2012-07-25 14:09:06 PDT
On SGX and QC QNX hardware, and possibly other platforms which support both depth and stencil attachments at the same time, WebKit fails to create an fbo error for "Attach depth, then stencil, causing conflict" and similar in section "Dimensions 2 x 2"
Attachments
Patch
(1.55 KB, patch)
2012-07-25 16:47 PDT
,
Joshua Netterfield
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joshua Netterfield
Comment 1
2012-07-25 16:47:01 PDT
Created
attachment 154484
[details]
Patch
Rob Buis
Comment 2
2012-07-25 19:22:20 PDT
Comment on
attachment 154484
[details]
Patch Nice find! Maybe some ports can unskip this test now...
WebKit Review Bot
Comment 3
2012-07-25 19:32:34 PDT
Comment on
attachment 154484
[details]
Patch Clearing flags on attachment: 154484 Committed
r123699
: <
http://trac.webkit.org/changeset/123699
>
WebKit Review Bot
Comment 4
2012-07-25 19:32:36 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug