[WebGL] fast/canvas/webgl/framebuffer-object-attachment.html fails on certain platforms https://bugs.webkit.org/show_bug.cgi?id=92296

Patch by Joshua Netterfield <jnetterfield@rim.com> on 2012-07-25
Reviewed by Rob Buis.

No new tests, because it introduces no new functionality, only fixes the above mentioned test.

* html/canvas/WebGLFramebuffer.cpp:
(WebCore::WebGLFramebuffer::checkStatus):

Canonical link: https://commits.webkit.org/110136@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123699 268f45cc-cd09-0410-ab3c-d52691b4dbfc